<resources>
    <string name="app_name">LavoraMi</string>
    <string name="lavoriInCorso">In corso</string>
    <string name="settings">Impostazioni</string>
    <string name="general">Generali</string>
    <string name="lines">Linee</string>
    <string name="disclaimer_text">LavoraMi è un\'applicazione indipendente sviluppata da terze parti e NON è in alcun modo affiliata, supportata, autorizzata o sponsorizzata da ATM S.p.A., Trenord S.r.l., Gruppo FNM, RFI o altri enti di trasporto citati. Tutti i dati visualizzati in questa applicazione (orari, stati del servizio, avvisi) sono raccolti da fonti pubbliche al solo scopo di migliorarne la comprensione e a puro scopo informativo. Non si fornisce alcuna garanzia, esplicita o implicita, riguardo l\'accuratezza, la completezza, l\'affidabilità o la tempestività delle informazioni fornite. Le informazioni potrebbero non riflettere variazioni dell\'ultimo minuto. L\'uso dell\'applicazione è interamente a proprio rischio. Lo sviluppatore declina ogni responsabilità per eventuali inesattezze, ritardi, mancati servizi, danni diretti o indiretti derivanti dall\'affidamento sulle informazioni fornite da questa app. Per le decisioni di viaggio critiche, si raccomanda di fare sempre riferimento ai canali ufficiali, agli annunci sonori e alla segnaletica presente in stazione.  Tutti i marchi, i loghi e i nomi commerciali citati appartengono ai legittimi proprietari.</string>
    <string name="fonti_dati">Fonti Dati</string>
    <string name="schermoBloccatoAccount">Schermo Bloccato</string>
    <string name="scannerizzaImpronta">Scannerizza l\'impronta o il viso per continuare</string>
    <string name="bentornatoAccount">Bentornato</string>
    <string name="accediDepsAccount">Accedi al tuo account per continuare.</string>
    <string name="passwordDimenticataAccount">Password Dimenticata?</string>
    <string name="nonHaiAccount">Non hai un account?</string>
    <string name="termsPart1">"Continuando, accetti i "</string>
    <string name="termini">"Termini "</string>
    <string name="termsPart2">"e la "</string>
    <string name="googleLogin">Accedi con Google</string>
    <string name="accediAccount">Accedi</string>
    <string name="welcomeAccountLoggedIn">"Ciao "</string>
    <string name="gestisciDepsAccount">Qui puoi gestire il tuo Account e le tue informazioni.</string>
    <string name="infoAccount">Informazioni</string>
    <string name="creatoConGoogle">Account creato con Google</string>
    <string name="gestisciAccount">Gestisci</string>
    <string name="editPasswordAccount">Modifica Password</string>
    <string name="deleteAccount">Elimina Account</string>
    <string name="richiediDati">Richiedi i tuoi dati</string>
    <string name="logoutAccount">Esci</string>
    <string name="createAccount">Crea Account</string>
    <string name="createAccountDeps">Registrati per iniziare.</string>
    <string name="fullNameAccount">Nome utente</string>
    <string name="signUpWithGoogle">Registrati con Google</string>
    <string name="signUpAccount">Registrati</string>
    <string name="haiAccountButton">Hai già un Account?</string>
    <string name="logginInGoogleTitle">Accesso in corso</string>
    <string name="logginInGoogleDeps">Stiamo facendo l\'accesso con il tuo Account Google, attendi.</string>
    <string name="popUpConfirmEmail">Conferma Mail</string>
    <string name="emailPopUpDeps">Verifica il tuo indirizzo Email con la mail che ti abbiamo inviato per continuare.</string>
    <string name="closePopUp">Chiudi</string>
    <string name="areYouSurePopUp">Sei sicuro?</string>
    <string name="logoutConfirmationPopUp">Sei sicuro di voler uscire dall\'Account?</string>
    <string name="cancelPopUp">Annulla</string>
    <string name="emailSentTitle">Email inviata!</string>
    <string name="emailSentDeps">"Email inviata a "</string>
    <string name="deleteAccountTitlePopUp">Sei sicuro di voler Eliminare Definitivamente il tuo Account?</string>
    <string name="confirmPopUp">Conferma</string>
    <string name="ediPasswordPopUpTitle">Ti invieremo una mail per modificare la tua password, vuoi continuare?</string>
    <string name="continueButtonPopUp">Continua</string>
    <string name="signInPopUpTitle">Accedi al tuo Account</string>
    <string name="biometricAuthPopUpDeps">Usa l\'impronta o il viso per accedere.</string>
    <string name="advancedOptionsTitle">Opzioni Avanzate</string>
    <string name="errorMessagesOptions">Mostra Messaggi Errore</string>
    <string name="showErrorsDeps">Mostra messaggi di errore quando fallisce il Download dei dati dal server.</string>
    <string name="bannerStrikesOptions">Mostra Banner Scioperi</string>
    <string name="bannerStrikesDeps">Mostra il banner di scioperi nella Home quando sono presenti.</string>
    <string name="requireBiometricAuth">Richiedi Biometria</string>
    <string name="requireBiometricAuthDeps">Richiedi la Biometria per sbloccare la sezione del tuo Account. Per modificare questa opzione è richiesta la verifica biometrica.</string>
    <string name="cleanCache">Pulisci Memoria Cache</string>
    <string name="cacheMemoryDeps">Elimina la memoria Cache dal dispositivo, liberando spazio su disco.</string>
    <string name="cacheMemoryPopUpDeps">Sei sicuro di voler eliminare la memoria Cache dell\'app?</string>
    <string name="editSettingsPopUpTitle">Modifica impostazioni</string>
    <string name="editSettingsPopUpDeps">Usa l\'impronta o il viso per modificare questa impostazione.</string>
    <string name="libraryName">Nome Libreria</string>
    <string name="libraryInfos">Informazioni sul componente</string>
    <string name="libraryInfoName">Nome:</string>
    <string name="libraryInfoVersion">Versione:</string>
    <string name="libraryInfoLicense">Licenza:</string>
    <string name="libraryLicenseText">Testo della licenza</string>
    <string name="defaultFilterTitle">Filtro Predefinito</string>
    <string name="allFilter">Tutti</string>
    <string name="metroFilter">Metropolitana</string>
    <string name="trainFilter">Treno</string>
    <string name="inProgressFilter">In Corso</string>
    <string name="scheduledFilter">Programmati</string>
    <string name="atmFilter">di ATM</string>
    <string name="trenordFilter">di Trenord</string>
    <string name="movibusFilter">di Movibus</string>
    <string name="stavFilter">di STAV</string>
    <string name="autoguidovieFilter">di Autoguidovie</string>
    <string name="acknowledgmentsTitle">Librerie Open-Source</string>
    <string name="linesSearchBar">Cerca per tipo o numero...</string>
    <string name="metroLinesTitle">Linee Metropolitane</string>
    <string name="suburbanLinesTitle">Linee Suburbane</string>
    <string name="tiloLinesTitle">Linee Transfrontaliere</string>
    <string name="malpensaExpressLinesTitle">Linee Malpensa Express</string>
    <string name="tramLinesTitle">Linee Tranviarie</string>
    <string name="busLinesTitle">Linee di Bus</string>
    <string name="linesDirectionsTitle">DIREZIONI:</string>
    <string name="tramDeviationsTitle">LINEA DI TRAM SOGGETTA A DEVIAZIONI</string>
    <string name="waitingTimeLinesDetails">TEMPO DI ATTESA:</string>
    <string name="interchangeStopLinesDetails">FERMATA DI INTERSCAMBIO:</string>
    <string name="noInterchangeStationTitle">Nessuna fermata di interscambio.</string>
    <string name="onlyOnWorkingDaysTitle">LA LINEA È ATTIVA SOLO NEI GIORNI LAVORATIVI</string>
    <string name="worksLineDetails">LAVORI SULLA LINEA:</string>
    <string name="mapChip">Mappa</string>
    <string name="lineWorksChip">Lavori</string>
    <string name="interchangesChip">Interscambi</string>
    <string name="noWorksOnThisLine">Non ci sono lavori su questa linea.</string>
    <string name="loadingMapDetails">Caricamento</string>
    <string name="noInternetConnectionError">Nessuna connessione a Internet.</string>
    <string name="noInterchanges">Nessun interscambio con questa linea.</string>
    <string name="averageWaitingTimeTitle">"Frequenza media: "</string>
    <string name="currentWorksTitle">attuali</string>
    <string name="currentWorksSingularTitle">attuale</string>
    <string name="scheduledWorksTitle">programmati</string>
    <string name="scheduledWorksSingularTitle">programmato</string>
    <string name="fallbackNoWorks">0 attuali,\n0 programmati.</string>
    <string name="tilo">TILO</string>
    <string name="suburban">Suburbano</string>
    <string name="avvisoSciopero">AVVISO SCIOPERO</string>
    <string name="dateSciopero">Sciopero proclamato per il:</string>
    <string name="noWorkOnFilter">Nessun lavoro trovato per questo filtro</string>
    <string name="noWorkOnFilterHint">Prova a modificare i filtri selezionati per trovare altri lavori.</string>
    <string name="resetFilters">Mostra tutti i lavori</string>
    <string name="downloadDataError">Impossibile caricare i dati dal server.</string>
    <string name="retry">Riprova</string>
    <string name="next">Avanti</string>
    <string name="dataDisclaimer">Questa applicazione aggrega dati pubblici, accessibili a tutti, per facilitarne la consultazione.</string>
    <string name="teamSviluppo">Team di Sviluppo</string>
    <string name="iosDeveloper">Sviluppatore iOS:</string>
    <string name="androidDeveloper">Sviluppatori Android:</string>
    <string name="webDeveloper">Sviluppatori Web:</string>
    <string name="support">Supportaci</string>
    <string name="supportText">Se ti piace LavoraMi, puoi aiutarci facendo una donazione tramite Patreon o Buy Me A Coffee!</string>
    <string name="patreonSupport">Supportaci su Patreon</string>
    <string name="buyACoffeSupport">Supportaci su Buy Me A Coffee</string>
    <string name="followOn">Seguici su:</string>
    <string name="contacts">Contattaci:</string>
    <string name="bugReport">Segnala un bug</string>
    <string name="webSite">Sito Web</string>
    <string name="credits">Librerie Open-Source</string>
    <string name="terminiDiServizio">Termini di servizio</string>
    <string name="appearance">Aspetto e Lingua</string>
    <string name="sistemaTheme">Sistema</string>
    <string name="darkTheme">Scuro</string>
    <string name="lightTheme">Chiaro</string>
    <string name="maintenanceTitle">Manutenzione in corso.</string>
    <string name="maintenanceDeps">I server di LavoraMi non sono attualmente disponibili. Ci scusiamo per il disagio.</string>
    <string name="retryMaintenanceBtn">Riprova</string>
    <string name="understood">Ho capito</string>
    <string name="choseOperator">Scegli le tue linee</string>
    <string name="yourDataDeps2">I tuoi dati di LavoraMi sono completamente privati e protetti, potrai richiederli quando vuoi selezionando \"Richiedi i tuoi Dati\".</string>
    <string name="editUserNameDeps">Inserisci un nuovo nome utente per il tuo Account.</string>
    <string name="insertNicknameTitle">Modifica Nome Utente</string>
    <string name="customiseTitle">Personalizza</string>
    <string name="dialogFavouriteLineText">Scegli i tuoi operatori di trasporti più usati e, mettendoli nei preferiti, riceverai subito le notifiche con nuovi lavori.</string>
    <string name="dialog_bus_title">Mappe per i Bus</string>
    <string name="dialog_bus_desc_1">Guarda le Mappe dei bus che usi ogni giorno! Dettagliate e create appositamente per te! [Funzione disponibile per linee MOVIBUS].</string>
    <string name="dialog_bus_title_1">Visualizza le Mappe</string>
    <string name="dialog_bus_title_2">Selezione una fermata</string>
    <string name="dialog_bus_desc_2">Seleziona una fermata e visualizza gli orari del bus! Basta cliccarci sopra e vedrai le prossime partenze.</string>
    <string name="dialog_bus_title_3">Cambia Direzione</string>
    <string name="dialog_bus_desc_3">Cambia la direzione del tuo bus, selezionando il pulsante con questa icona. Potrai vedere le fermate nel senso opposto!</string>
</resources>