<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    app:cardCornerRadius="16dp"
    app:cardElevation="8dp"
    android:layout_margin="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:id="@+id/text_title"
            android:layout_width="235dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dp"
            android:fontFamily="@font/font_main"
            android:gravity="center"
            android:text="@string/choseOperator"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/text_primary"/>

        <TextView
            android:layout_marginTop="10dp"
            android:id="@+id/text_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter"
            android:gravity="center"
            android:text="@string/dialogFavouriteLineText"
            android:textColor="@color/subtitle"
            android:textSize="13sp" />

        <Button
            android:id="@+id/btn_close_dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/redMetro"
            android:fontFamily="@font/font_main"
            android:text="@string/understood"
            android:textColor="@color/White"
            android:textStyle="bold" />
    </LinearLayout>
</androidx.cardview.widget.CardView>