<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:backgroundTint="@color/disclosureBg"
    app:cardCornerRadius="16dp"
    app:cardElevation="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="start"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:id="@+id/text_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:fontFamily="@font/font_main"
            android:textColor="@color/text_primary"
            android:text="@string/dialog_bus_title"
            android:textSize="24sp"
            android:layout_marginBottom="20dp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="24dp">

            <ImageView
                android:id="@+id/icon_feature_one"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:layout_marginEnd="16dp"
                android:src="@drawable/ic_location"
                app:tint="@color/BUS" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/text_title_one"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/font_main"
                    android:text="@string/dialog_bus_title_1"
                    android:textSize="17sp"
                    android:textStyle="bold"
                    android:textColor="@color/text_primary" />

                <TextView
                    android:id="@+id/text_desc_one"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:fontFamily="@font/font_main"
                    android:text="@string/dialog_bus_desc_1"
                    android:textSize="14sp"
                    android:textColor="@color/subtitle" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="24dp">

            <ImageView
                android:id="@+id/icon_feature_two"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:layout_marginEnd="16dp"
                android:src="@drawable/ic_work_location"
                app:tint="@color/BUS" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/text_title_two"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/font_main"
                    android:text="@string/dialog_bus_title_2"
                    android:textSize="17sp"
                    android:textStyle="bold"
                    android:textColor="@color/text_primary" />

                <TextView
                    android:id="@+id/text_desc_two"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:fontFamily="@font/font_main"
                    android:text="@string/dialog_bus_desc_2"
                    android:textSize="14sp"
                    android:textColor="@color/subtitle" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="8dp">

            <ImageView
                android:id="@+id/icon_feature_three"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:layout_marginEnd="16dp"
                android:src="@drawable/ic_change_route"
                app:tint="@color/BUS" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/text_title_three"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/font_main"
                    android:text="@string/dialog_bus_title_3"
                    android:textSize="17sp"
                    android:textStyle="bold"
                    android:textColor="@color/text_primary" />

                <TextView
                    android:id="@+id/text_desc_three"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:fontFamily="@font/font_main"
                    android:text="@string/dialog_bus_desc_3"
                    android:textSize="14sp"
                    android:textColor="@color/subtitle" />

            </LinearLayout>
        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textAlignment="center"
            android:text="Puoi rivedere le funzioni premendo sulla chip della mappa mentre la stai visualizzando."
           android:layout_marginBottom="6dp"
            android:textColor="@color/subtitle"/>

        <com.google.android.material.chip.ChipGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <com.google.android.material.chip.Chip
                android:id="@+id/chipMappaDialog"
                style="@style/Widget.MaterialComponents.Chip.Action"
                app:chipBackgroundColor="@color/BUS"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:chipMinHeight="40dp"
                android:textColor="@color/White"
                app:iconStartPadding="15dp"
                app:textEndPadding="15dp"
                android:text="@string/mapChip"
                app:chipCornerRadius="50dp"
                android:textStyle="bold"
                app:chipIcon="@drawable/ic_location"
                app:chipIconTint="@color/White"
                app:fontFamily="@font/font_main"
                app:chipIconSize="16dp"
                app:chipIconVisible="true"/>

        </com.google.android.material.chip.ChipGroup>
    </LinearLayout>

    <Button
        android:id="@+id/btn_close_tutorial"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/dismiss_icon_grey_500"
        android:fontFamily="@font/font_main"
        android:text="@string/closePopUp"
        android:textColor="@color/text_primary"
        android:textStyle="bold" />

    </LinearLayout>
</androidx.cardview.widget.CardView>
