<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/background_app"
    tools:context=".ChangeUsername">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background_app"
        android:elevation="0dp"
        android:stateListAnimator="@null"
        app:liftOnScroll="false">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/headerLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="45dp"
            android:paddingHorizontal="16dp"
            android:paddingBottom="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/customiseTitle"
                android:fontFamily="@font/font_main"
                android:textColor="@color/text_primary"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" />

            <ImageButton
                android:id="@+id/backBtn"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:background="@color/background_app"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/ic_back"
                app:tint="?attr/colorControlNormal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        app:tint="@color/background_app">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="20dp">

            <ImageView
                android:id="@+id/imgHeaderAccessibility"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginTop="5dp"
                android:src="@drawable/ic_at"
                app:tint="#E41414" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/font_main"
                android:text="@string/insertNicknameTitle"
                android:textAlignment="center"
                android:textColor="@color/text_primary"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/inter"
                android:text="@string/editUserNameDeps"
                android:textAlignment="center"
                android:textColor="@color/subtitle"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/inter"
                android:text="@string/yourDataDeps2"
                android:textAlignment="center"
                android:textColor="@color/subtitle"
                android:textSize="12sp" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/usernameEditText"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginTop="20dp"
                android:hint="@string/fullNameAccount"
                android:inputType="text"
                android:textColor="@color/text_primary"
                android:textColorHint="@color/subtitle"
                android:textSize="16sp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:fontFamily="@font/font_main"/>

            <LinearLayout
                android:id="@+id/buttonContinueLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="24dp"
                app:layout_constraintBottom_toBottomOf="parent">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/buttonContinue"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:backgroundTint="@color/redMetro"
                    android:fontFamily="@font/font_main"
                    android:text="@string/continueButtonPopUp"
                    android:textAllCaps="false"
                    android:textColor="@color/White"
                    android:textSize="18sp"
                    app:cornerRadius="12dp" />
            </LinearLayout>

            <TextView
                android:id="@+id/errorText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="-17dp"
                android:fontFamily="@font/font_main"
                android:text=""
                android:textAlignment="center"
                android:textColor="@color/subtitle"
                android:textSize="13sp" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>