<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MaintenanceActivity">

    <LinearLayout
        android:id="@+id/errorNetwork"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/iconWifi"
            android:layout_width="88dp"
            android:layout_height="59dp"
            android:src="@drawable/ic_wifi_maintenance"
            app:tint="@color/text_primary" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/work_sans_medium"
            android:text="@string/maintenanceTitle"
            android:textColor="@color/text_primary"
            android:textSize="33sp"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:fontFamily="@font/work_sans_medium"
            android:text="@string/maintenanceDeps"
            android:textAlignment="center"
            android:textColor="@color/text_primary"
            android:textSize="18sp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"/>

        <TextView
            android:id="@+id/maintenanceDeps"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:fontFamily="@font/work_sans_medium"
            android:text="deps"
            android:textAlignment="center"
            android:textColor="@color/GRAY"
            android:textSize="15sp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"/>

        <Button
            android:id="@+id/btnRefreshOnError"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/redMetro"
            android:text="@string/retryMaintenanceBtn"
            android:textColor="@color/White"
            app:icon="@drawable/ic_refresh"
            app:iconGravity="textStart"
            app:iconPadding="10dp"
            app:iconTint="@color/White" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>